@@ -48,6 +48,7 @@
 * Shift4: Add gateway adapter [ali-hassan] #4415
 * Rapyd: Correctly add `billing_address` [naashton] #4465
 * Credorax: Update processor response messages [jcreiff] #4466
+* Shift4: add `customer_reference`, `destination_postal_code`, `product_descriptors` fields and core refactoring [ajawadmirza] #4469
 
 == Version 1.126.0 (April 15th, 2022)
 * Moneris: Add 3DS MPI field support [esmitperez] #4373
